--- a/pom.xml
+++ b/pom.xml
@@ -96,14 +96,14 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://13.126.40.112:9980/mithuntechnologies/repository/icicibank-release/</url>
+	      <name>manisha Technologies Releases Nexus Repository</name>
+	      <url>http://13.127.253.245:9980/manishatechnologies/repository/icicibank-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://13.126.40.112:9980/mithuntechnologies/repository/icicibank-snapshot/</url>
+	      <name>manisha Technologies Snapshot Nexus Repository </name>
+	      <url>http://13.127.253.245:9980/manishatechnologies/repository/icicibank-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
